@@ -92,9 +92,12 @@
 		* Add SadSoul Map with Evolutions map. (Tryller)
 		* Add GOD account to forgottenserver.s3db 2/2. (Tryller)
 		* Add new shop module to npc system StdModule.allBlessings. (Tryller)
-		* Add old quest system absed on unique id (quests.lua). (Tryller)
+		* Add new feature from TFS 0.4 monsterSpawnWalkback. (Tryller)
+		* Add new lua functions from TFS 0.4 doSteerCreature(cid, position[, maxNodes]). (Tryller)
+		* Add old quest system based on unique id (quests.lua). (Tryller)
 		* Clean actions, movements and weapons scripts to work only with 7.9 items (Tryller)
 		* Only mysql and sqlite support. (Tryller)
+		* Only console support. (Tryller)
 		* Fix isItemStackable and isItemFluidContainer based on hard coded instead of lua. (Tryller)
 		* Fix stamina system with 56 hours instead of 42. (Tryller)
 		* Fix PlayerCustomFlag_HasFullLight not working properly. (Tryller)
@@ -111,10 +114,14 @@
 		* Remove account name lua functions getAccountByName(name) and getAccountByAccountId(accId). (Tryller)
 		* Remove swimming pool from 7.9 protocol. (Tryller)
 		* Remove non 7.9 icons 	ICON_CURSED, ICON_BUFF, ICON_PZ and ICON_PROTECTIONZONE. (Tryller)
-		* Remove Walkthrough and war amblem. (Tryller)
+		* Remove Walkthrough and war emblem. (Tryller)
 		* Remove not supported 7.9 outfits. (Tryller)
 		* Remove not supported 7.9 monsters. (Tryller)
 		* Remove not supported 7.9 spells. (Tryller)
 		* Remove bag from monsters. (Tryller)
+		* Remove lua function getItemInfo and move functions to new lua functions, getItemPluralNameById(itemid), getItemArticleById(itemid), 
+			getItemRWInfo(uid), getItemWeaponType(uid), isCorpse(uid), getFluidSourceType(type), getItemDescriptionsById(itemid),
+			getItemDescriptions(uid) and getItemWeightById(itemid, count[, precise = TRUE]). (Tryller)
+
 	]
 ]
